--- a/src/components/MainLayout/index.css
+++ b/src/components/MainLayout/index.css
@@ -2,14 +2,9 @@
   display: flex;
   padding: 3rem;
   overflow-x: scroll;
-  background: var(--prim-color);
   border-radius: 10px;
 }
 
-.g1 {
-  border: 1px solid 'red';
-}
-
-.g2 {
-  border: 1px solid 'green';
+.new-task {
+  padding-top: var(--padglobal);
 }
