--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,5 +1,5 @@
-.header-comp {
+.header-container {
   padding: var(--padglobal);
-  padding-left: var(--padleft);
-  box-shadow: var(--shad1);
+  padding-left: 24px;
+  box-shadow: var(--shadow-1);
 }
