--- a/src/components/MainLayout/index.css
+++ b/src/components/MainLayout/index.css
@@ -7,12 +7,11 @@
 
 .main-content {
   height: 100%;
-  overflow-x: scroll;
 }
 
 .main-board {
   display: flex;
   padding: var(--padglobal);
-
   border-radius: 10px;
+  overflow-y: scroll;
 }
