--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -2,4 +2,9 @@
   padding: var(--padglobal);
   padding-left: 24px;
   box-shadow: var(--shadow-1);
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  background: #fff;
+  z-index: 99;
 }
