--- a/src/components/Task/index.css
+++ b/src/components/Task/index.css
@@ -37,3 +37,10 @@
   background: red;
   border-radius: 7px;
 }
+
+.task-progress_opt {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
