--- a/src/components/Board/index.css
+++ b/src/components/Board/index.css
@@ -1,6 +1,6 @@
 .board-container {
   padding: var(--padglobal);
-  border-radius: 10px;
+  border-radius: var(--border5);
 }
 
 .board-content {
@@ -36,4 +36,15 @@
   font-weight: 600;
   font-size: 16px;
   padding-bottom: 16px;
+}
+
+.new-task {
+  padding-top: 24px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.new-task i {
+  padding-right: 8px;
 }
