--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --padglobal: 8px;
+
+  --border5: 5px;
+
+  --black20: rgba(0, 0, 0, 0.2);
+  --shadow-1: 1px 1px 1px var(--black20);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
